# dat4_plant_watering_web

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml
.github/: rust-deploy.yml
.github/workflows/: actions.yml  rust-deploy alexac.yml  rust-deploy copy.yml  rust-deploy.yml
next-frontend/: Dockerfile  next.config.js  next.config.mjs  package.json
next-frontend/src/pages/: graph.tsx
plant-water-frontend/: package-lock.json
reverse-proxy/: nginx.conf
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: main.rs
rust-backend/tests/: basictests.rs  tests.rs
rust-backend/workflows/: rust-deploy.yml
src/: main.rs
