[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }
diesel = { version = "2.0.1", features = ["postgres"] }
env_logger = "0.9.1"
log = "0.4.17"